--- a/app/home/templates/home/index.html
+++ b/app/home/templates/home/index.html
@@ -104,9 +104,9 @@
         Made by <a href="https://twitter.com/ebar0n" target="_blank">@ebar0n</a>
       </div>
       <div class="mui-container mui--text-center">
-        With ♥ by <a href="https://www.djangoproject.com" target="_blank">Django</a>
-        and <a href="https://www.muicss.com" target="_blank">MUICSS</a>,
-        Using the powers of <a href="https://www.docker.com/" target="_blank">Docker</a>
+        With ♥ <a href="https://www.djangoproject.com" target="_blank">Django</a>
+        and ♥ <a href="https://www.muicss.com" target="_blank">MUICSS</a>,
+        Using the powers of ♥ <a href="https://www.docker.com/" target="_blank">Docker</a>
       </div>
     </footer>
   </body>
